Central: Fix layout of About page logos on narrow viewports
Fixes #501

--- a/public_html/wp-content/themes/wordcamp-central-2012/style.css
+++ b/public_html/wp-content/themes/wordcamp-central-2012/style.css
@@ -2015,7 +2015,7 @@ li:after { content: "."; display: block; height: 0; clear: both; visibility: hid
 
 #content .logos {
 	float: right;
-	width: 711px;
+	width: auto;
 }
 
 #content .logos ul {
